ihale son adım'a ekleme yapıldı

--- a/IhalematikPro/Forms/IhaleAdim/frm_TeklifAdimSon.resx
+++ b/IhalematikPro/Forms/IhaleAdim/frm_TeklifAdimSon.resx
@@ -5487,6 +5487,24 @@
         8j91kUbX3K/WKgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="cmbSecim.Properties.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAedEVYdFRpdGxlAFNlbGVjdFRvb2w7Q3Vyc29yO01v
+        dXNlO7hg0MsAAAJ9SURBVDhPbZJJTJNBGIanBAgIiBjjSaPxYuLFeOAC8aCmYoIgIlCWikWwQEVkKSAW
+        kFYbExaBimAtuANajJCoxDUBtVGiIsoSREgBNyiKW6LH1+8r6oHMJE9m/m/eeWYm8wsA/6HmVd/UYabe
+        h1AUGJuE3mgT+nLiCHNG5DNlVs7Or1kg8G08fxOZ+VWVPCYUeRR2U3pa5BI5JVaikbNSgZ/F1onrXQ7s
+        y6moom+3ZHxqVvwj+3C9yC6u56xU4F99qh2zcz9x7cYjpB4ws2QRQRKXGJt0iawii9hfaOGsXHC8thWu
+        Lz/g/PAZ9s4eaHSmaqr7EQoWZOpr3HCTCQJMlRfwafY7Xo+8w9iUCxfb70OtLTtBcyzx0OZWCYabTLDY
+        YG7Gx5lv6BuaxJOXY3g+OIFzV+4gYa+Bt/UnPFKzKzgrFxSVW/F+eg6PX4zinmPIzbMBJ5pbbiMuubCW
+        MgGEB4dlgsCsghrQXXHXMYju3hE6xVuMTszgjXMatktdiE7Kr6OcWyITLNHozBSeQe+rcTxwDKCtoxu7
+        M45CnW4ijEjSmrBLXch38JIJgjjIu9VZ7Sg2WtE/PIkU3bHfK1at3UDzy3gTgv8P6QmCEtPKUdt4FSGb
+        VbaY5KLxnqeDqG6wY9vODBPN+8RpDCJ2j4Gz82sWCJaoUkoRsiW+gcbLlRFpxsqTbXhIkqhEvZNqSwlF
+        tPoQZ6UC3+1xB/nNAwnPlavXrVGllPzqG55AnsGCkE2x8VT3jkoo4KxUwM/j/bdXEP5hO9LtZ1u70HT5
+        FpSR2haq+Uao8qiTC0Qk2TcqNW6oea4P3hoaHpPzNSxK1x8cGqmkmld4TC7P0RqIP3By5isngnhwAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
   <data name="btnCalc.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
